# Clientes-sin-ventana

./: README.md  pyproject.toml  requirements.txt
Gestor/: config.py  database.py  helpers.py  menu.py  run.py
Gestor/tests/: __init__.py  test_database.py
